# RenderAPI

./: LICENSE  Main.c  README.md  RenderAPI.sln  RenderAPI.vcxproj  display.c  display.h  mesh.c  mesh.h  triangle.c  triangle.h  vector.h
.github/workflows/: ci.yml
RenderAPI/: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  RenderAPI.vcxproj  RenderAPI.vcxproj.filters  array.h  display.c  display.h  light.c  light.h  main.c  matrix.c  matrix.cpp  matrix.h  mesh.c  mesh.h  texture.c  texture.h  triangle.c  triangle.h  vector.c  vector.h
RenderAPI/Debug/: RenderAPI.exe.recipe  RenderAPI.ilk  vc143.idb
RenderAPI/Debug/RenderAPI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RenderAPI.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RenderAPI/Release/: RenderAPI.exe.recipe  RenderAPI.iobj  RenderAPI.ipdb
RenderAPI/Release/RenderAPI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RenderAPI.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RenderAPI/include/: config.h
RenderAPI/src/: config.c  display.c  main.c  mesh.c  upng.c
RenderAPI/x64/Debug/: RenderAPI.exe.recipe  RenderAPI.ilk  vc143.idb
RenderAPI/x64/Debug/RenderAPI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RenderAPI.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
